--- a/website/www/templates/layout/_header.html
+++ b/website/www/templates/layout/_header.html
@@ -10,13 +10,13 @@
           <a href="/www/overview">overview</a>
         </li>
         <li>
-          <a href="/www/get_started">get started</a>
+          <a href="/www/install">install</a>
         </li>
         <li>
-          <a href="/www/api">docs</a>
+          <a href="/www/api">api & docs</a>
         </li>
         <li>
-          <a href="/www/download">download</a>
+          <a href="/www/faq">faq</a>
         </li>
         <li>
           <a href="/www/contact">contact</a>
