--- a/website/www/templates/layout/_partners.html
+++ b/website/www/templates/layout/_partners.html
@@ -1,5 +1,6 @@
 <div class="k brands partner_bar">
   <div class=" eq">
+    <a href="https://www.fit-equipex.fr" target="_blank"><img src="/assets/img/fit-equipex.png"></a>
     <a href="http://www.inria.fr" target="_blank"><img src="/assets/img/inria.png"></a>
     <a href="http://fed4fire.eu" target="_blank"><img src="/assets/img/fed4fire_sm.png"></a>
     <a href="http://r2lab.inria.fr" target="_blank"><img src="/assets/img/r2lab_logo.svg"></a>
