--- a/website/www/templates/layout/body_face.html
+++ b/website/www/templates/layout/body_face.html
@@ -28,16 +28,16 @@
         <div class="menu_bar">
           <div class="row">
             <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_01">
-              <a href="/www/get_started" class="no_link_color"><img src="/assets/img/pin.svg" class="icon">
-        	    <h3>get started</h3></a>
+              <a href="/www/install" class="no_link_color"><img src="/assets/img/download.svg" class="icon">
+        	    <h3>install</h3></a>
 		        </div>
             <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_03">
               <a href="/www/api" class="no_link_color"><img src="/assets/img/settings.svg" class="icon">
               <h3>api & docs</h3></a>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_04">
-              <a href="/www/download" class="no_link_color"><img src="/assets/img/download.svg" class="icon">
-        	    <h3>download</h3></a>
+              <a href="/www/faq" class="no_link_color"><img src="/assets/img/pin.svg" class="icon">
+        	    <h3>faq</h3></a>
 		        </div>
             <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_02">
               <a href="/www/contact" class="no_link_color"><img src="/assets/img/compass-2.svg" class="icon">
