--- a/website/www/templates/layout/body_inside.html
+++ b/website/www/templates/layout/body_inside.html
@@ -35,6 +35,11 @@
       </div>
       {{ content }}
       {% endautoescape %}
+      <div class="row">
+        <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_01">
+          <br /><br />
+        </div>
+      </div>
     </div>
     {% include 'layout/_footer.html' %}
   </body>
