--- a/website/www/assets/css/overrides.css
+++ b/website/www/assets/css/overrides.css
@@ -1,3 +1,8 @@
+ul {
+  padding-left: 15px;
+  list-style-type: none;
+}
+
 /* footer block */
 .footer {
   background-color: rgb(27, 28, 29);
@@ -11,7 +16,7 @@
 }
 
 a:hover {
-  color: #FFF;
+  color: inherit;
   text-decoration: none;
 }
 
