--- a/website/www/templates/layout/_footer.html
+++ b/website/www/templates/layout/_footer.html
@@ -6,7 +6,7 @@
           <li><h6 class="eu">documentation</h6></li>
           <li><a href="/www/api" class="no_link_color_footer">api & docs</a></li>
           <li><a href="/www/manual" class="no_link_color_footer">manual</a></li>
-          <li><a href="/www/get_started" class="no_link_color_footer">get started</a></li>
+          <li><a href="/www/install" class="no_link_color_footer">install</a></li>
           <li><a href="/www/tutorial" class="no_link_color_footer">tutorials</a></li>
         </ul>
       </div>
