--- a/website/www/templates/layout/_header.html
+++ b/website/www/templates/layout/_header.html
@@ -7,19 +7,28 @@
     <div class="pw collapse">
       <ul class="nav navbar-nav pk">
         <li>
-          <a href="/www/overview">overview</a>
+          <a href="/www/overview/">overview</a>
         </li>
         <li>
-          <a href="/www/install">install</a>
+          <a href="/www/install/">install</a>
+        </li>
+        <!-- <li>
+          <a href="/www/tutorial/">tutorials</a>
         </li>
         <li>
-          <a href="/www/tutorial">tutorials</a>
+          <a href="/www/example/">examples</a>
         </li>
         <li>
-          <a href="/www/api">api & docs</a>
+          <a href="/www/case/">cases</a>
+        </li> -->
+        <li>
+          <a href="/www/learn/">learn</a>
         </li>
         <li>
-          <a href="/www/contact">contact</a>
+          <a href="/www/api/">api & docs</a>
+        </li>
+        <li>
+          <a href="/www/contact/">contact</a>
         </li>
       </ul>
     </div><!--/.nav-collapse -->
