--- a/website/www/templates/layout/body_face.html
+++ b/website/www/templates/layout/body_face.html
@@ -32,8 +32,8 @@
         	    <h3>install</h3></a>
 		        </div>
             <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_04">
-              <a href="/www/tutorial" class="no_link_color"><img src="/assets/img/education.svg" class="icon">
-        	    <h3>tutorials</h3></a>
+              <a href="/www/learn" class="no_link_color"><img src="/assets/img/education.svg" class="icon">
+        	    <h3>learn</h3></a>
 		        </div>
             <div class="col-xs-3 col-sm-3 col-md-3 text-center vr-all" id="t_03">
               <a href="/www/api" class="no_link_color"><img src="/assets/img/settings.svg" class="icon">
