--- a/website/www/templates/layout/_footer.html
+++ b/website/www/templates/layout/_footer.html
@@ -6,8 +6,9 @@
           <li><h6 class="eu">documentation</h6></li>
           <li><a href="/www/install" class="no_link_color_footer">install</a></li>
           <li><a href="/www/tutorial" class="no_link_color_footer">tutorials</a></li>
-          <li><a href="/www/api" class="no_link_color_footer">api & docs</a></li>
           <li><a href="/www/example" class="no_link_color_footer">examples</a></li>
+          <li><a href="/www/case" class="no_link_color_footer">cases</a></li>
+          <li><a href="/www/api" class="no_link_color_footer">api & docs</a></li>
         </ul>
       </div>
       <div class="fu ag">
